--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
 <div class="container">
     <h2>Phone us!</h2>
-    <a href="tel:555-555-5555"><img src="resources/phone-icon.png" height="50"></a>
+    <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
 </div>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
