added frame for blog. html

--- a/blog.html
+++ b/blog.html
@@ -42,17 +42,26 @@
 </nav>
 
 
-
+<h1 class="text-center">B-Bike</h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
-    <h1>B-Bike</h1>
+
     <br>
     <div class="container text-center">
+        <h3>Article 1</h3>
+        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
+        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+    </div>
+    <div class="container text-center">
+        <h3>Article 2</h3>
+        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
     </div>
 </div>
     <br>
 <div class="container pt-5 mt-4 d-flex flex-row">
     <div class="container text-center">
+        <h3>Article 3</h3>
+        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
     </div>
     <br>
