--- a/Services.html
+++ b/Services.html
@@ -78,7 +78,8 @@
 </div>
 
 <div class="container pt-5">
-    <h1>B-Bike</h1>
+    <h1>What we offer</h1>
+    <p>We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
     <br>
     <br>
     <br>
@@ -115,5 +116,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
