changed alert message

--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,9 @@
 </div>
 
 <div class="container">
+    <div class="alert alert-info" role="alert">
+        <strong>Or call us  here</strong>
+    </div>
     <h2>Phone us!</h2>
     <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
 </div>
