--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                <input type="submit" value="Submit">
+                <button type="submit" value="SuBmiT" class="btn btn-secondary">Submit</button>
             </form>
         </div>
     </div>
