--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
 <div class="parallax">
     <div class="wrap-center">
         <div class="banner-centered" id="banner-text">
-            <h2>Welcome to <strong>B-bike</strong></h2>
+            <h2 class="mb-0">Welcome to <strong>B-bike</strong>, have a ride on our site</h2>
+            <a href="Services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
 </div>
 
+
 <div class="container pt-5">
     <div class="media">
-        <img class="d-flex align-self-center mr-3" src="/images/pathToYourImage.png" alt="Generic placeholder image">
-        <div class="media-body">
-            <h5 class="mt-0">Center-aligned media</h5>
+        <img class="d-flex align-self-center  img-thumbnail ml-5" src="resources/bike2.jpg"
+             alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
+        <div class="media-body m-5">
+            <h2 class="mt-0">Center-aligned media</h2>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
                 odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
                 fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -64,20 +67,22 @@
         </div>
     </div>
     <div class="media">
-        <div class="media-body mr-3">
-            <h5 class="mt-0">Center-aligned media</h5>
+        <div class="media-body m-5">
+            <h2 class="mt-0">Center-aligned media</h2>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
                 odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
                 fringilla. Donec lacinia congue felis in faucibus.</p>
             <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
                 penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
         </div>
-        <img class="d-flex align-self-center" src="/images/pathToYourImage.png" alt="Generic placeholder image">
+        <img class="d-flex align-self-center img-thumbnail mr-5" src="resources/bike3.jpg"
+             style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
     </div>
     <div class="media">
-        <img class="d-flex align-self-center mr-3" src="/images/pathToYourImage.png" alt="Generic placeholder image">
-        <div class="media-body">
-            <h5 class="mt-0">Center-aligned media</h5>
+        <img class="d-flex align-self-center  img-thumbnail ml-5" src="resources/bike4.jpg"
+             alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
+        <div class="media-body m-5">
+            <h2 class="mt-0">Center-aligned media</h2>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
                 odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
                 fringilla. Donec lacinia congue felis in faucibus.</p>
