--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
         </form>
     </div>
 </nav>
-<img src="" alt="picture of an e-bike">
+<img class="aboutus1" src="resources/aboutus1.jpg" height="721" width="1169" alt="picture of e-bikes"
 
 <div class="container pt-5">
     <h1>B-Bike</h1>
