add service to the web

--- a/services.html
+++ b/services.html
@@ -77,16 +77,31 @@
     </a>
 </div>
 
-<div class="container pt-5">
-    <h1>What we offer</h1>
-    <p>We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+<div class="container pt-5 row m-auto">
+    <div class="card col m-1">
+        <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h4 class="card-title">What we offer</h4>
+            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+            <a href="#!" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+    <div class="card col m-1">
+        <img class="card-img-top" src="resources/bike7.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h4 class="card-title">What we offer</h4>
+            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+            <a href="#!" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+    <div class="card col m-1">
+        <img class="card-img-top" src="resources/bike8.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h4 class="card-title">What we offer</h4>
+            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+            <a href="#!" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
     <br>
     <br>
     <br>
