--- a/blog.html
+++ b/blog.html
@@ -44,25 +44,32 @@
 
 <h1 class="text-center">B-Bike</h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
-
     <br>
     <div class="container text-center">
         <h3>Article 1</h3>
-        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
+        <img src="resources/bycicle6.jpg" alt="Cycling" width="500" height="300">
+        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
     </div>
+</div>
+<hr>
+<div class="container pt-5 mt-4 d-flex flex-row justify-content-start">
     <div class="container text-center">
         <h3>Article 2</h3>
-        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
+        <img src="resources/bycicle7.jpg" alt="Cycling" width="250" height="300">
+        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
     </div>
 </div>
     <br>
-<div class="container pt-5 mt-4 d-flex flex-row">
-    <div class="container text-center">
-        <h3>Article 3</h3>
-        <img src="placeholder.jpg" alt="Cycling" width="250" height="300">
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+<hr>
+<div class="container pt-5 mt-2 d-flex flex-row justify-content-end">
+    <div class="">
+        <img src="resources/bycicle8.jpg" class="image-fluid float-right ml-4" alt="Cycling" width="500" height="300">
+        <div class="">
+        <h3 d-flex>Article 3</h3>
+        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+        </div>
     </div>
     <br>
     <br>
