--- a/services.html
+++ b/services.html
@@ -26,13 +26,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="aboutus.html">about us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="contact.html">contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="services.html">service</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -78,7 +84,7 @@
 </div>
 
 <div class="container pt-5 row m-auto">
-    <div class="card col m-1">
+    <div class="card col-md m-1">
         <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
         <div class="card-body">
             <h4 class="card-title">What we offer</h4>
@@ -86,7 +92,7 @@
             <a href="#!" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
-    <div class="card col m-1">
+    <div class="card col-md m-1">
         <img class="card-img-top" src="resources/bike7.jpg" alt="Card image cap">
         <div class="card-body">
             <h4 class="card-title">What we offer</h4>
@@ -94,7 +100,7 @@
             <a href="#!" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
-    <div class="card col m-1">
+    <div class="card col-md m-1">
         <img class="card-img-top" src="resources/bike8.jpg" alt="Card image cap">
         <div class="card-body">
             <h4 class="card-title">What we offer</h4>
@@ -102,10 +108,6 @@
             <a href="#!" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
 </div>
 
 <!-- Footer -->
