adding images to card index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+
 </head>
 
 <body>
@@ -96,28 +97,35 @@
                 penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
         </div>
     </div>
+    <div class="card-group mt-3 text-center">
+        <div class="card border-0">
+            <div class="card-body">
+                <img class="card-img-top small-im" src="resources/003-settings.png" alt="Card image cap">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+            </div>
+        </div>
+        <div class="card border-0">
+            <div class="card-body">
+                <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+            </div>
+        </div>
+        <div class="card border-0">
+            <div class="card-body">
+                <img class="card-img-top small-im" src="resources/002-credit-card.png" alt="Card image cap">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+            </div>
+        </div>
+
+
+    </div>
 </div>
-<div class="card-group">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-    </div>
 </div>
 
 
