--- a/blog.html
+++ b/blog.html
@@ -45,32 +45,39 @@
 <h1 class="text-center">B-Bike</h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
     <br>
-
-    <div class="container text-center">
+    <div class="container text-left">
         <img src="resources/bycicle6.jpg" class="image-fluid float-right" alt="Cycling" width="500" height="300">
-        <h3>Article 1</h3>
+        <h3 class="text-center">Article 1</h3>
+        <div class="border border-dark">
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
         <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+        <button>Read more</button>
+        </div>
     </div>
 </div>
 <hr>
-<div class="container pt-5 mt-4 d-flex flex-row justify-content-start">
-    <div class="container text-center">
-
-        <img src="resources/bycicle7.jpg" class="image-fluid float-left" alt="Cycling" width="300" height="350">
-        <h3>Article 2</h3>
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+<div class="container pt-5 mt-4 d-flex flex-row">
+    <div class="container text-right">
+        <img src="resources/bycicle7.jpg" class="image-fluid float-left" alt="Cycling" width="500" height="400">
+        <h3 class="text-center">Article 2</h3>
+        <div class="border border-dark">
+            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+            <button>Read More</button>
+        </div>
     </div>
 </div>
     <br>
 <hr>
-<div class="container pt-5 mt-2 d-flex flex-row justify-content-end">
-    <div class="container text-center">
-        <img src="resources/bycicle8.jpg" class="image-fluid float-right ml-4" alt="Cycling" width="500" height="300">
-        <h3 d-flex>Article 3</h3>
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
-
+<div class="container pt-5 mt-2 d-flex flex-row">
+    <div class="container text-left">
+        <img src="resources/bycicle8.jpg" class="image-fluid float-right " alt="Cycling" width="500" height="300">
+        <h3 class="text-center">Article 3</h3>
+        <div class="border border-dark">
+            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+            <button>Read More</button>
+        </div>
     </div>
     <br>
     <br>
