--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="contact.html">contact</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
