--- a/services.html
+++ b/services.html
@@ -25,19 +25,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="contact.html">contact</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
@@ -56,7 +56,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
-    <div class="carousel-inner" role="listbox">
+    <div class="carousel-inner " role="listbox">
         <div class="carousel-item active">
             <img class="d-block w-100" src="resources/bike1.jpg" alt="900x400"  data-holder-rendered="true">
         </div>
@@ -70,7 +70,7 @@
             <img class="d-block w-100" src="resources/bike4.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike5.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img class="d-block w-100" src="resources/bike10.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -82,32 +82,249 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+<div class="container mt-5">
 
-<div class="container pt-5 row m-auto">
-    <div class="card col-md m-1">
-        <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h4 class="card-title">What we offer</h4>
-            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-            <a href="#!" class="btn btn-primary">Go somewhere</a>
+
+    <!--Section: Content-->
+    <section class="text-center">
+
+        <!-- Section heading -->
+        <h3 class="font-weight-bold mb-5">The Store</h3>
+
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/shoes%20(2).jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Jeans Shoes <span class="badge badge-primary badge-pill align-text-bottom ml-1">New</span></h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$85</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+                <!--/.Card-->
+
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Leather Belt</h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$70</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+
+                <!--/.Card-->
+            </div>
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Leather Belt</h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$70</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+
+                <!--/.Card-->
+            </div>
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Leather Belt</h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$70</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+
+                <!--/.Card-->
+            </div>
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/belt.jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Leather Belt</h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$70</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+
+                <!--/.Card-->
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-4 mb-4">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay">
+                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/img%20(4).jpg" class="card-img-top" alt="">
+                        <a>
+                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h5 class="card-title">Checkered shirt <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
+                        <!--Text-->
+                        <p class="mb-0 text-muted">$134</p>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--Grid column-->
+
         </div>
-    </div>
-    <div class="card col-md m-1">
-        <img class="card-img-top" src="resources/bike7.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h4 class="card-title">What we offer</h4>
-            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-            <a href="#!" class="btn btn-primary">Go somewhere</a>
+
+        <nav class="d-flex justify-content-center mt-3" aria-label="Page navigation example">
+            <ul class="pagination pagination-circle pg-blue">
+                <li class="page-item disabled"><a class="page-link">First</a></li>
+                <li class="page-item disabled">
+                    <a class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item active"><a class="page-link">1</a></li>
+                <li class="page-item"><a class="page-link">2</a></li>
+                <li class="page-item"><a class="page-link">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link">Last</a></li>
+            </ul>
+        </nav>
+
+    </section>
+    <!--Section: Content-->
+
+
+</div>
+
+<div class="container mt-5">
+    <section>
+        <h3 class="font-weight-bold mb-5 text-center">The services</h3>
+        <div class="row">
+            <div class="card col-md m-1">
+                <img class="card-img-top" src="resources/bike6.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">What we offer</h4>
+                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <a href="#!" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card col-md m-1">
+                <img class="card-img-top" src="resources/bike7.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">What we offer</h4>
+                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <a href="#!" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card col-md m-1">
+                <img class="card-img-top" src="resources/bike8.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">What we offer</h4>
+                    <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
+                    <a href="#!" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="card col-md m-1">
-        <img class="card-img-top" src="resources/bike8.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h4 class="card-title">What we offer</h4>
-            <p class="card-text">We are your premium partner for bike service and delivery. Our services are perfectly adapted to your needs and your satisfaction is most important to us – no matter where you bought your bike.</p>
-            <a href="#!" class="btn btn-primary">Go somewhere</a>
-        </div>
-    </div>
+    </section>
 </div>
 
 <!-- Footer -->
