--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="wrap-center">
         <div class="banner-centered" id="banner-text">
             <h2 class="mb-0">Welcome to <strong>B-bike</strong>, have a ride on our site</h2>
-            <a href="Services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
+            <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
 </div>
