--- a/blog.html
+++ b/blog.html
@@ -48,10 +48,11 @@
     </div>
 </nav>
 
-
+<header>
 <h1 class="text-center">B-Bike</h1>
+</header>
 <div class="container pt-5 mt-4 d-flex flex-row">
-<hr>
+
     <br>
     <div class="container text-center">
         <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
