--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
         </form>
     </div>
 </nav>
-<img class="aboutus1" src="resources/aboutus1.jpg" height="721" width="1169" alt="picture of e-bikes"
+     <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100%">
 
 <div class="container pt-5">
     <h1>B-Bike</h1>
