romove arrows and errors

--- a/aboutus.html
+++ b/aboutus.html
@@ -47,11 +47,8 @@
         </form>
     </div>
 </nav>
-<<<<<<< HEAD
-     <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100%">
-=======
+     <img src="resources/aboutus4.jpeg" class="img-fluid max-width: 100%" alt="">
 <img class="aboutus1" src="resources/aboutus1.jpg" height="721" width="1169" alt="picture of e-bikes">
->>>>>>> 383255d08efbe76d85e985a050ba63254ca12790
 
 <div class="container pt-5">
     <h1>B-Bike</h1>
