updated README file and small changes to blog

--- a/blog.html
+++ b/blog.html
@@ -49,17 +49,20 @@
 </nav>
 
 <header>
-<h1 class="text-center">B-Bike</h1>
+
+
+
 </header>
+<h1 class="text-center">B-Bike</h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
 
     <br>
     <div class="container text-center">
         <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <h3 class="text-center">Article 1</h3>
+        <h3 class="text-center">History of bikes</h3>
         <div class="">
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
-        <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+        <p>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1 billion were in existence at a given time. These numbers far exceed the number of cars, both in total and ranked by the number of individual models produced. They are the principal means of transportation in many regions.  </p>
+        <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
             <p>
                 <button class="btn btn-primary btn-primary-frank" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     Read More
