added the checkboxes to requirements section

--- a/blog.html
+++ b/blog.html
@@ -84,8 +84,13 @@
         <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="400" height="400">
         <h3 class="text-center">Article 2</h3>
         <div class="">
-            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
-            <p>Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</p>
+            <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall indicating the pressure appropriate for that tire. Note that bicycles use much higher pressures than cars: car tires are normally in the range 30 to 40 pounds per square inch while bicycle tires are normally in the range 60 to 100 pounds per square inch.
+
+                Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and brakes. Most of the bearings on a modern bike are sealed and grease-filled and require little or no attention; such bearings will usually last for 10,000 miles or more.
+
+                The chain and the brake blocks are the components which wear out most quickly, so these need to be checked from time to time (typically every 500 miles or so). Most local bike shops will do such checks for free. Note that when a chain becomes badly worn it will also wear out the rear cogs/cassette and eventually the chain ring(s), so replacing a chain when only moderately worn will prolong the life of other components.
+
+                Over the longer term, tires do wear out (2000 to 5000 miles); a rash of punctures is often the most visible sign of a worn tire. </p>
             <p>
                 <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
                     Read More
