--- a/contact.html
+++ b/contact.html
@@ -71,21 +71,61 @@
 </div>
 
 <div class="container">
+    <div class="row">
+        <div class="column">
+        <h2>Opening hours</h2>
+    <table class="table">
+        <tbody>
+        <tr>
+            <td>Monday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Saturday</td>
+            <td>10:00 - 18:00</td>
+        </tr>
+        <tr>
+            <td>Sunday</td>
+            <td>Closed</td>
+        </tr>
+        </tbody>
+    </table>
+        </div>
+        <div class="column">
+        <h2>Phone us!</h2>
+        <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
+    </div>
+    </div>
+</div>
+
+<div class="container">
     <div class="alert alert-info" role="alert">
         <strong>Or call us  here</strong>
     </div>
-    <h2>Phone us!</h2>
-    <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
 </div>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
-
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
 
