--- a/blog.html
+++ b/blog.html
@@ -13,10 +13,6 @@
 </head>
 <body>
 
-<div class="header text-center">
-    <h1>INSERT IMAGE HERE</h1>
-</div>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">B-bike</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +49,7 @@
 
 
 </header>
-<h1 class="text-center">B-Bike</h1>
+<h1 class="text-center"></h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
 
     <br>
@@ -68,17 +64,7 @@
                 in many regions.</p>
             <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
                 fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
-        </div>
-                <button class="btn btn-primary btn-primary-frank" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    Read More
-                </button>
-            <div class="collapse" id="collapseExample">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
-
-
+            <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button">More Info</a>
         </div>
     </div>
 </div>
@@ -93,29 +79,16 @@
                 difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
                 indicating the pressure appropriate for that tire. Note that bicycles use much higher pressures than
                 cars: car tires are normally in the range 30 to 40 pounds per square inch while bicycle tires are
-                normally in the range 60 to 100 pounds per square inch.
+                normally in the range 60 to 100 pounds per square inch.</p>
 
-                Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
+            <p> Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
                 brakes. Most of the bearings on a modern bike are sealed and grease-filled and require little or no
-                attention; such bearings will usually last for 10,000 miles or more.
+                attention; such bearings will usually last for 10,000 miles or more.</p>
 
-                The chain and the brake blocks are the components which wear out most quickly, so these need to be
-                checked from time to time (typically every 500 miles or so). Most local bike shops will do such checks
-                for free. Note that when a chain becomes badly worn it will also wear out the rear cogs/cassette and
-                eventually the chain ring(s), so replacing a chain when only moderately worn will prolong the life of
-                other components.
 
-                Over the longer term, tires do wear out (2000 to 5000 miles); a rash of punctures is often the most visible sign of a worn tire. </p>
+            <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button">More Info</a>
         </div>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
-                    Read More
-                </button>
-
-            <div class="collapse" id="collapseExample2">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
+    </div>
 
     </div>
 </div>
@@ -129,21 +102,15 @@
 
             <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
                 consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
-                friendly mode of transport. Ivan Illich stated that bicycle use extended the usable physical environment
+                friendly mode of transport.</p>
+            <p>Ivan Illich stated that bicycle use extended the usable physical environment
                 for people, while alternatives such as cars and motorways degraded and confined people's
                 environment and mobility. Currently, two billion bicycles are in use around the world. Children,
-                students, professionals, laborers, civil servants and seniors are pedaling around their communities.
-                They all experience the freedom and the natural opportunity for exercise that the bicycle easily provides. Bicycle also has lowest carbon intensity of travel.</p>
-        </div>        
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-                    Read More
-                </button>
-            <div class="collapse" id="collapseExample3">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
+                students, professionals, laborers, civil servants and seniors are pedaling around their communities.</p>
+            <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button">More Info</a>
+        </div>
     </div>
+</div>
     <br>
     <br>
     <br>
