added footer to blog page

--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 <div class="container pt-5 mt-4 d-flex flex-row">
     <div class="container text-center">
         <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="400" height="400">
-        <div class="">
+        <div class="ml-2">
             <h3 class="text-center">Basic Maintenance</h3>
 
             <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
@@ -97,7 +97,7 @@
 <div class="container pt-5 mt-2 d-flex flex-row">
     <div class="container text-center">
         <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <div class="">
+        <div class="mr-2">
             <h3 class="text-center">Cycling is green</h3>
 
             <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
@@ -125,14 +125,49 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small blue">
-
+<footer class="page-footer font-small blue bg-light">
+    <div class=" container mt-3 d-flex flex-row pt-5">
+        <div class="p-2 m-3 w-25">
+            <div class="card-body">
+                <h3 class="card-title">B-bike</h3>
+                <p class="card-text">
+                    Tolhuis,<br>
+                    Sint-Pietersvliet 7,<br>
+                    2000 Antwerpen
+                </p>
+                <p>Phone : 555-555-5555</p>
+            </div>
+        </div>
+        <div class="p-2 m-3 w-50 ">
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                    <tr class="text-center">
+                        <th></th>
+                        <th>Opening hours</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">From monday to saturday :</th>
+                        <td class="text-center">10:00-18:00</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sunday :</th>
+                        <td class="text-center">Closed</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+        <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
     </div>
     <!-- Copyright -->
+
 
 </footer>
 <!-- Footer -->
