--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,11 @@
 <div class="container">
     <div class="row">
         <div class="column">
-            <h2>Where to find us?</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.643848491332!2d4.398762415121469!3d51.22563623908726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6591c88f09d%3A0x31d6c38718baba03!2sThe%20Beacon!5e0!3m2!1snl!2sbe!4v1597830979335!5m2!1snl!2sbe" width="500" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <h2 class="pb-3">Where to find us?</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.643848491332!2d4.398762415121469!3d51.22563623908726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6591c88f09d%3A0x31d6c38718baba03!2sThe%20Beacon!5e0!3m2!1snl!2sbe!4v1597830979335!5m2!1snl!2sbe" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         <div class="column">
-            <h2>Contact us!</h2>
+            <h2 class="pb-2">Contact us!</h2>
             <form action="mailto:someone@example.com" method="post" enctype="text/plain">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -75,7 +75,7 @@
 <div class="container">
     <div class="row">
         <div class="column">
-        <h2>Opening hours</h2>
+        <h2 class="pb-3">Opening hours</h2>
     <table class="table">
         <tbody>
         <tr>
@@ -110,7 +110,7 @@
     </table>
         </div>
         <div class="column">
-        <h2>Phone us!</h2>
+        <h2 class="pb-3">Phone us!</h2>
         <a href="tel:555-555-5555"><img src="resources/phone-icon.png"></a>
     </div>
     </div>
