Passing text in light in footer

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small text-white bg-dark">
-    <div class=" container mt-3 d-flex flex-row pt-5">
+<footer class="page-footer font-small text-light bg-dark">
+    <div class="container mt-3 d-flex flex-row pt-5">
         <div class="p-2 m-3 w-25">
             <div class="card-body">
-                <h3 class="card-title">B-bike</h3>
+                <h3 class="card-title text-light">B-bike</h3>
                 <p class="card-text">
                     Tolhuis,<br>
                     Sint-Pietersvliet 7,<br>
@@ -136,7 +136,7 @@
         </div>
         <div class="p-2 m-3 w-50 ">
             <div class="card-body">
-                <table class="table">
+                <table class="table text-lightgitt">
                     <thead>
                     <tr class="text-center">
                         <th></th>
