Changing nav bar order

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item active text-capitalize">
-                <a class="nav-link" href="contact.html">contact</a>
-            </li>
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
+            </li>
+            <li class="nav-item active text-capitalize">
+                <a class="nav-link" href="contact.html">contact</a>
             </li>
         </ul>
     </div>
@@ -136,7 +136,7 @@
         </div>
         <div class="p-2 m-3 w-50 ">
             <div class="card-body">
-                <table class="table text-lightgitt">
+                <table class="table text-light">
                     <thead>
                     <tr class="text-center">
                         <th></th>
