added another image

--- a/blog.html
+++ b/blog.html
@@ -49,13 +49,14 @@
 
 
 </header>
+
 <h1 class="text-center"></h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
 
     <br>
     <div class="container text-center">
         <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <div class="">
+        <div class="text_spacingblog2" >
             <h3 class="text-center">History of bikes</h3>
 
             <p>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
@@ -71,8 +72,8 @@
 <hr>
 <div class="container pt-5 mt-4 d-flex flex-row">
     <div class="container text-center">
-        <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="400" height="400">
-        <div class="ml-2">
+        <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="300" height="350">
+        <div class="text_spacingblog">
             <h3 class="text-center">Basic Maintenance</h3>
 
             <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
@@ -97,7 +98,7 @@
 <div class="container pt-5 mt-2 d-flex flex-row">
     <div class="container text-center">
         <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
-        <div class="mr-2">
+        <div class="text_spacingblog">
             <h3 class="text-center">Cycling is green</h3>
 
             <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
