--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,15 +46,15 @@
     </div>
 </nav>
 
-<div class="parallax">
-    <div class="wrap-center">
-        <div class="banner-centered" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong>, have a ride on our site</h2>
+<div class="parallax container">
+    <div class="wrap-center row">
+        <div class="banner-centered col" id="banner-text">
+            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span id="hiddedM">, have a ride on our site</span></h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
 </div>
-
+</div>
 
 <div class="container pt-5">
     <div class="media border-bottom row">
