changed active link for blog

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="aboutus.html">about us</a>
             </li>
-            <li class="nav-item active text-capitalize">
+            <li class="nav-item text-capitalize">
                 <a class="nav-link" href="contact.html">contact</a>
             </li>
             <li class="nav-item text-capitalize">
                 <a class="nav-link" href="services.html">service</a>
             </li>
-            <li class="nav-item text-capitalize">
+            <li class="nav-item active text-capitalize">
                 <a class="nav-link" href="blog.html">blog</a>
             </li>
         </ul>
@@ -41,14 +41,13 @@
 </nav>
 
 <header>
+    <div class="container pt-5 mt-4 d-flex flex-row">
 
-
-
+    </div>
 </header>
 
 <h1 class="text-center"></h1>
 <div class="container pt-5 mt-4 d-flex flex-row">
-
     <br>
     <div class="container text-center">
         <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
@@ -110,13 +109,7 @@
 </div>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 </div>
 
 
