--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 </nav>
 
-<div class="parallax container">
+<div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
             <h2 class="mb-0">Welcome to <strong>B-bike</strong><span id="hiddedM">, have a ride on our site</span></h2>
