--- a/services.html
+++ b/services.html
@@ -305,8 +305,8 @@
 <footer class="page-footer font-small blue bg-dark">
     <div class=" container mt-3 d-flex flex-row pt-5">
         <div class="p-2 m-3 w-25">
-            <div class="card-body">
-                <h3 class="card-title">B-bike</h3>
+            <div class="card-body text-white">
+                <h3 class="card-title text-white">B-bike</h3>
                 <p class="card-text">
                     Tolhuis,<br>
                     Sint-Pietersvliet 7,<br>
@@ -317,7 +317,7 @@
         </div>
         <div class="p-2 m-3 w-50 text-">
             <div class="card-body">
-                <table class="table">
+                <table class="table text-white">
                     <thead>
                     <tr class="text-center">
                         <th></th>
@@ -340,7 +340,7 @@
     </div>
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
     </div>
     <!-- Copyright -->
