--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-sm">
             <h2 class="pb-2">Contact us!</h2>
-            <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+            <form action="https://formspree.io/mnqgyvov" method="post">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
                 <label for="lname">Last Name</label>
