add google fonts'

--- a/services.html
+++ b/services.html
@@ -6,14 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
-<div class="header text-center">
+<div class="header text-center container">
     <h1>INSERT IMAGE HERE</h1>
 </div>
 
@@ -45,7 +46,7 @@
 </nav>
 
 
-<div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel" style="height: 100vh">
+<div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel" style="height: 100vh">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -296,14 +297,14 @@
             </div>
         </div>
         <div class="btn-visit text-center w-100 mt-3">
-            <a href="#!" class="btn btn-primary text-center" style="width: 30%">Go somewhere</a>
+            <a href="#" class="btn btn-primary text-center" style="width: 30%">Go somewhere</a>
         </div>
     </section>
 </div>
 
 <!-- Footer -->
 <footer class="page-footer font-small blue bg-dark">
-    <div class=" container mt-3 d-flex flex-row pt-5">
+    <div class="container mt-3 d-flex flex-row pt-5">
         <div class="p-2 m-3 w-25">
             <div class="card-body text-white">
                 <h3 class="card-title text-white">B-bike</h3>
